[config] Use systemd activation for dbus. Contributes to JB#24120
Add systemd unit file and adjust building and packaging accordingly.
Add SystemdService to dbus service.

Signed-off-by: Tomi Leppänen <tomi.leppanen@jolla.com>

--- a/pacrunner/Makefile.am
+++ b/pacrunner/Makefile.am
@@ -9,6 +9,10 @@ dbusconf_DATA = src/pacrunner.conf
 dbusdatadir = @DBUS_DATADIR@
 
 dbusdata_DATA = src/pacrunner.service
+
+systemdunitdir = @SYSTEMD_UNITDIR@
+
+systemdunit_DATA = src/dbus-pacrunner.service
 endif
 
 gdbus_sources = gdbus/gdbus.h gdbus/mainloop.c gdbus/watch.c \
