--- a/pacrunner/src/pacrunner.service.in
+++ b/pacrunner/src/pacrunner.service.in
@@ -1,4 +1,5 @@
 [D-BUS Service]
 Name=org.pacrunner
-Exec=@prefix@/sbin/pacrunner
+Exec=/bin/false
 User=root
+SystemdService=dbus-org.pacrunner.service
